Implement non-weight CRUD and weight CLI
